fixed overflow x issues when window was small

--- a/src/app.css
+++ b/src/app.css
@@ -175,7 +175,7 @@ button:focus-visible {
 
 body {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   margin: 0;
 }
 
